--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Meetup is a free responsive single page bootstrap template by designerdada.com">
-  <meta name="author" content="Akash Bhadange">
-  <title>Meetup: Free Responsive One Page Bootstrap Template</title>
+  <meta name="description" content="ElifTech IoT Workshop">
+  <meta name="author" content="ElifTech">
+  <title>ElifTech IoT Workshop</title>
 
   <!-- Bootstrap -->
   <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -28,14 +28,16 @@
         <div class="row hero-header" id="home">
           <div class="col-md-7">
             <h1>IoT Lviv Workshop</h1>
-            <h3>Вітаємо. Ми - команда <span>ElifTech IoT</span>, і плануємо організувати воркшоп восени,
-              присвячений розробці невеликого пристрою та під”єднання його до amazon сервісів.
+            <h3>Вітаємо. Ми - команда <span>ElifTech IoT</span>
+              <br>
+              Цієї осені ми плануємо провести невеликий IoT воркшоп, на якому з радістю навчимо усіх бажаючих тому як створити свій компактний пристрій на базі мікроконролера arduino або його аналогу, та як під'єднати цей пристрій до amazon сервісів. 
               <br>
               <br>
-              Воркшоп триватиме 1 повний день, під час якого досвідчений інструктор пояснить,
-              в якій руці тримати паяльник, а в якій - клавіатуру, відповість на всі
-              поставлені питання, а також допоможе і проконсультує у випадку, якщо твій код
-              не запускається або з твоєї плати пішов дим.</h3>
+              Воркшоп триватиме 1 повний день.
+              <br>
+              Обіцяємо, що за цей час ви назавжди запам'ятаєте, в якій руці потрібно тримати паяльник, а в якій - клавіатуру. 
+              <br>
+              А досвідчений учасник нашої команди покроково пояснить роботу над завданням та проконсультує, у випадку якщо ваш код відмовляється запускатись, та пояснить що робити, якщо із плати іде дим.</h3>
             <a href="http://goo.gl/forms/5u3py4YutSey8F9R2" class="btn btn-lg btn-red" target="_blank">Зареєструватись <span class="ti-arrow-right"></span></a>
 
           </div>
@@ -51,25 +53,25 @@
           <h2 class="row-title">Всього за один день, ти дізнаєшся</h2>
           <div class="col-md-4 feature">
             <span class="ti-plug"></span>
-            <h3>Як зібрати пристрій, і заставити його працювати, під”єднавши до джерела живлення</h3>
+            <h3>Як зібрати невеликий розумний пристрій, і змусити його працювати</h3>
           </div>
           <div class="col-md-4 feature">
             <span class="ti-server"></span>
-            <h3>Як прикрутити інтерфейс Arduino до пристрою, і надати можливість твоєму пристрою сприймати команди з сервера</h3>
+            <h3>Як запрограмувати Arduino сумісний мікроконтролер так щоб він приймав сигнали з <s>космосу</s> віддаленого сервера</h3>
           </div>
           <div class="col-md-4 feature">
             <span class="ti-cloud"></span>
-            <h3>Як прикрутити його до хмарних технологій, таких як AWS IoT</h3>
+            <h3>Як використовувати AWS IoT чи схожі хмарні технології для контролю та моніторингу системи з одного або декількох незалежних пристроїв</h3>
           </div>
         </div>
         <div class="row me-row content-ct">
           <div class="col-md-6 feature">
             <span class="ti-microphone"></span>
-            <h3>Як прикрутити систему розпізнавання голосових команд у свій пристрій, і зробити його схожим на футуристичних роботів з майбутнього</h3>
+            <h3>Як навчити вашого робота розуміти мову людини та слухатися свого власника</h3>
           </div>
           <div class="col-md-6 feature">
             <span class="ti-rocket"></span>
-            <h3><b>В результаті:</b> ти віднесеш додому готовий пристрій, де зможеш продовжувати самостійно займатися над його вдосконаленням</h3>
+            <h3><b>Після цього воркшопу:</b> ти матимеш змогу принести додому готовий пристрій, та самостійно займатися його вдосконаленням</h3>
           </div>
         </div>
         <!-- End: Desc -->
@@ -79,8 +81,8 @@
       <!-- Start: Tickets -->
       <div class="container-fluid tickets" id="info">
         <div class="row me-row content-ct">
-          <h2 class="row-title">Підпишись на оновлення і будь в курсі всіх новин, пов'язаних з івентом,<br> таких як дата, час, місце і ціна</h2>
-          <div class="col-md-4 col-sm-6 col-md-offset-4">
+          <h2 class="row-title">Ціну квитків для участі в воркшопі ми оголосимо ближче до дати проведення події<br>Заповни Google форму і будь в курсі всіх новин, пов'язаних з івентом</h2>
+          <div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
             <a href="http://goo.gl/forms/5u3py4YutSey8F9R2" class="btn btn-lg btn-red" target="_blank">Підписатись</a>
           </div>
         </div>
