--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
         <div class="row hero-header" id="home">
           <div class="col-md-7">
             <h1>IoT Lviv Workshop</h1>
-            <h3>Вітаємо. Ми - команда <span>ElifTech IoT</span>
+            <h3>Привіт. Ми - команда <span>ElifTech IoT</span>
               <br>
               Цієї осені ми плануємо провести невеликий IoT воркшоп, на якому з радістю навчимо усіх бажаючих тому як створити свій компактний пристрій на базі мікроконролера arduino або його аналогу, та як під'єднати цей пристрій до amazon сервісів. 
               <br>
