--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
       <![endif]-->
 
   <link href="css/custom.css" rel="stylesheet">
+  <script src="https://use.fontawesome.com/062d035b39.js"></script>
     </head>
     <body id="page-top" data-spy="scroll" data-target=".side-menu">
       <div class="container-fluid">
@@ -30,12 +31,12 @@
             <h1>IoT Lviv Workshop</h1>
             <h3>Вітаємо. Ми - команда <span>ElifTech IoT</span>
               <br>
-              Цієї осені ми плануємо провести невеликий IoT воркшоп, на якому з радістю навчимо усіх бажаючих тому як створити свій компактний пристрій на базі мікроконролера arduino або його аналогу, та як під'єднати цей пристрій до amazon сервісів. 
+              Цієї осені ми плануємо провести невеликий IoT воркшоп, на якому з радістю навчимо усіх бажаючих тому як створити свій компактний пристрій на базі мікроконролера arduino або його аналогу, та як під'єднати цей пристрій до amazon сервісів.
               <br>
               <br>
               Воркшоп триватиме 1 повний день.
               <br>
-              Обіцяємо, що за цей час ви назавжди запам'ятаєте, в якій руці потрібно тримати паяльник, а в якій - клавіатуру. 
+              Обіцяємо, що за цей час ви назавжди запам'ятаєте, в якій руці потрібно тримати паяльник, а в якій - клавіатуру.
               <br>
               А досвідчений учасник нашої команди покроково пояснить роботу над завданням та проконсультує, у випадку якщо ваш код відмовляється запускатись, та пояснить що робити, якщо із плати іде дим.</h3>
             <a href="http://goo.gl/forms/5u3py4YutSey8F9R2" class="btn btn-lg btn-red" target="_blank">Зареєструватись <span class="ti-arrow-right"></span></a>
@@ -52,25 +53,25 @@
         <div class="row me-row content-ct">
           <h2 class="row-title">Всього за один день, ти дізнаєшся</h2>
           <div class="col-md-4 feature">
-            <span class="ti-plug"></span>
+            <i class="fa fa-cogs" aria-hidden="true"></i>
             <h3>Як зібрати невеликий розумний пристрій, і змусити його працювати</h3>
           </div>
           <div class="col-md-4 feature">
-            <span class="ti-server"></span>
+            <i class="fa fa-wifi" aria-hidden="true"></i>
             <h3>Як запрограмувати Arduino сумісний мікроконтролер так щоб він приймав сигнали з <s>космосу</s> віддаленого сервера</h3>
           </div>
           <div class="col-md-4 feature">
-            <span class="ti-cloud"></span>
+            <i class="fa fa-mixcloud" aria-hidden="true"></i>
             <h3>Як використовувати AWS IoT чи схожі хмарні технології для контролю та моніторингу системи з одного або декількох незалежних пристроїв</h3>
           </div>
         </div>
         <div class="row me-row content-ct">
           <div class="col-md-6 feature">
-            <span class="ti-microphone"></span>
+            <i class="fa fa-microphone" aria-hidden="true"></i>
             <h3>Як навчити вашого робота розуміти мову людини та слухатися свого власника</h3>
           </div>
           <div class="col-md-6 feature">
-            <span class="ti-rocket"></span>
+            <i class="fa fa-space-shuttle" aria-hidden="true"></i>
             <h3><b>Після цього воркшопу:</b> ти матимеш змогу принести додому готовий пристрій, та самостійно займатися його вдосконаленням</h3>
           </div>
         </div>
